--- a/views/admin.html
+++ b/views/admin.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Panel Administrador</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
     <a class="navbar-brand" href="home.html">Subastas WCH</a>
@@ -36,7 +38,18 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="card shadow text-center h-100">
+          <div class="card-body">
+            <h5 class="card-title">Historial de Ofertas</h5>
+            <p class="card-text">Consulta las ofertas por producto.</p>
+            <a href="/ofertas-admin.html" class="btn btn-primary">Ver ofertas</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
+
 </html>
