--- a/views/admin.html
+++ b/views/admin.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
         <div class="card shadow text-center h-100">
           <div class="card-body">
             <h5 class="card-title">Historial de Ofertas</h5>
@@ -46,7 +46,7 @@
             <a href="/ofertas-admin.html" class="btn btn-primary">Ver ofertas</a>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
