--- a/views/gestion-usuarios.html
+++ b/views/gestion-usuarios.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gestión de Usuarios</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -16,10 +17,10 @@
   <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Gestión de usuarios</h2>
-<div class="d-flex gap-2">
-  <a href="/agregar-usuario.html" class="btn btn-success">Agregar usuario</a>
-  <a href="/admin.html" class="btn btn-secondary">Volver</a>
-</div>
+      <div class="d-flex gap-2">
+        <a href="/agregar-usuario.html" class="btn btn-success">Agregar usuario</a>
+        <a href="/admin.html" class="btn btn-secondary">Volver</a>
+      </div>
 
     </div>
 
